# narwhal

./: .gitignore  CMakeLists.txt  README.md
src/: background.cpp  background.h  cursor.cpp  cursor.h  event_manager.cpp  event_manager.h  main.cpp  main.h  strutils.cpp  strutils.h  utils.cpp  utils.h  windows.cpp  windows.h
